--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 
-
+    <link rel="stylesheet" href="style.css">
 
 </head>
 <body>
@@ -20,7 +20,7 @@
         </div>
     </div>
     <div class="container">
-        <div class="row justify-content-left py-5">
+        <div class="row justify-content-left py-5" id="myDIV">
             <div class="col-sm-12 col-md-3 col-lg-2">
                 <h3>You:</h3>
              </div>
